feat: update transaction model; refactor code

--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ ZALOPAY_KEY1 = sdngKKJmqEMzvh5QQcdD2A9XBSKUNaYn
 ZALOPAY_KEY2 = trMrHtvjo6myautxDUiAcYsVtaeQ8nhf
 ZALOPAY_ENDPOINT = https://sb-openapi.zalopay.vn/v2/create
 ZALOPAY_ENDPOINT_QUERY  = https://sb-openapi.zalopay.vn/v2/query
-ZALOPAY_CALLBACK_URL = https://8cc3-171-243-48-95.ngrok-free.app/api/zalopay/callback
+ZALOPAY_CALLBACK_URL = https://8883-171-243-48-95.ngrok-free.app/api/zalopay/callback
 
 //momo configuration
 MOMO_ACCESSKEY = F8BBA842ECF85
 MOMO_SECRETKEY = K951B6PE1waDMi640xX08PD3vg6EkVlz
 MOMO_REDIRECT_URL = https://developers.momo.vn/v3/vi/docs/payment/guides/home
-MOMO_IPN_URL =  https://8cc3-171-243-48-95.ngrok-free.app/api/momo/callback
+MOMO_IPN_URL =  https://8883-171-243-48-95.ngrok-free.app/api/momo/callback
 
