--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -26,5 +27,8 @@
     "mongo-db": "^1.0.2",
     "mongoose": "^6.7.3",
     "yarn": "^1.22.22"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
